fix: jumbotron image positioned off-screen

--- a/less/_variables.less
+++ b/less/_variables.less
@@ -53,11 +53,11 @@
 @dropdown-menu-right-panel-bg:darken(@dropdown-menu-left-panel-bg, 10%);
 
 // Backgrounds
-@bg-img-default: url('images/jumbotron-home.jpg');
+@bg-img-home: url('images/jumbotron-home.jpg');
 @bg-img-secondary: url('images/jumbotron-secondary.jpg');
 @bg-img-tertiary: url('images/bg-tertiary.jpg');
 
-@header-default-bg-img: @bg-img-default;
+@header-home-bg-img: @bg-img-home;
 @header-secondary-bg-img: @bg-img-secondary;
 
 @header-row-padding-bottom:20px;
