--- a/less/components/jumbotron.less
+++ b/less/components/jumbotron.less
@@ -19,18 +19,17 @@
           min-width: unset;
         }
     }
-    &.header-default-bg-img {
-      background-position: 90% 0;
+    &.header-home-bg-img {
+        background-position: 90% 0;
 
-      @media (min-width: @screen-sm-min) {
-        background-position: -230px 0;
-      }
+        @media (min-width: @screen-sm-min) {
+          background-position: -230px 0;
+        }
 
-      @media (min-width: 1400px) {
-        background-position: left center;
-      }
-    }
-    &.header-secondary-bg-img {
+        @media (min-width: 1400px) {
+          background-position: left center;
+        }
+
         .featured-jumbotron {
             min-height:300px;
             padding-top: 200px;
